just a few fixes with spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -25,7 +25,8 @@ $black: #000000;
 }
 
 #polytable {
-  width: 100%
+  height: 100%;
+  width: 100%;
 }
 
 tr:nth-child(even) {
